# sputnix_task

./: .gitignore  CMakeLists.txt  README.md
Debug/: main  output.txt
include/: geocoef.hpp  orientation.hpp  types.hpp
src/: main.cpp  orientaion.cpp
